# image-compression-benchmarks

./: .gitignore  LICENSE  README.md  benchmarking_prompt.txt  libjpeg-turbo_prompt.txt  requirements.txt
gpujpeg/: Dockerfile  docker-compose.yml  gpujpeg_benchmark.py
gpujpeg/src/: CMakeLists.txt  gpujpeg_decode.c  gpujpeg_encode.c  img_io.h
jpegli/: Dockerfile  README.md  ambiguities_report.md  docker-compose.yml
jpegli/src/: CMakeLists.txt  jpegli_benchmark.py  jpegli_encode.cpp
libavif/: Dockerfile  docker-compose.yml
libavif-aom/: Dockerfile  docker-compose.yml
libavif-aom/src/: CMakeLists.txt  libavif-aom_decode.c  libavif-aom_encode.c
libavif-svt/: Dockerfile  docker-compose.yml
libavif-svt/src/: CMakeLists.txt  libavif-svt_encode.c
libavif/src/: CMakeLists.txt  libavif_benchmark.py  libavif_decode.cpp  libavif_encode.cpp
libjpeg/: Dockerfile  ambiguities_report.md  docker-compose.yml  libjpeg_benchmark.py
libjpeg-turbo/: Dockerfile  README.md  ambiguities_report.md  docker-compose.yml  libjpeg-turbo_benchmark.py
libjpeg-turbo/src/: CMakeLists.txt  libjpeg-turbo_decode.c  libjpeg-turbo_encode.c  libjpeg_turbo_benchmark.py  libjpeg_turbo_decode.cpp  libjpeg_turbo_encode.cpp
libjpeg/src/: CMakeLists.txt  libjpeg_benchmark.py  libjpeg_decode.cpp  libjpeg_encode.c  libjpeg_encode.cpp
libjxl/: Dockerfile  README.txt  docker-compose.yml  report.md
libjxl/results/: test.csv
libjxl/src/: CMakeLists.txt  libjxl_benchmark.py  libjxl_decode.cpp  libjxl_encode.cpp
libwebp/: Dockerfile  docker-compose.yml  libwebp_benchmark.py
libwebp/results/: test.csv
libwebp/src/: CMakeLists.txt  libwebp_decode.c  libwebp_decode.cpp  libwebp_encode.c  libwebp_encode.cpp
mozjpeg/: Dockerfile  README.md  ambiguities_report.md  docker-compose.yml
mozjpeg/src/: CMakeLists.txt  build.sh  mozjpeg_benchmark.py
nvjpeg/: Dockerfile  docker-compose.yml  nvjpeg_benchmark.py
nvjpeg/src/: CMakeLists.txt  nvjpeg_benchmark.py  nvjpeg_decode.c  nvjpeg_encode.c
nvjpeg2k/: Dockerfile  docker-compose.yml
nvjpeg2k/src/: CMakeLists.txt  C_CMakeLists.txt  nvjpeg2k_decode.c  nvjpeg2k_encode.c
